--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <a href="#" i class="fab fa-facebook"/i></a>
       <a href="#" i class="fab fa-github"/i></a>
       <a href="#" i class="fab fa-twitter"/i></a>
-      <p>This Website was loved as our honey and if you taste the honey</p>
+      <p>This Website is loved as our honey and if you buy the honey, you can smell, see and taste all the love.</p>
     </div>
   </div>
 
